Set CSS to nowrap on file name label. This avoids seeing a blank filename if the filename is a long single word, and ensures that you always see file size.
Note: The existing text-overflow ellipsis does not appear to take effect.

--- a/CHS Extranet/HAP.Web/style/MyFiles.css
+++ b/CHS Extranet/HAP.Web/style/MyFiles.css
@@ -18,7 +18,7 @@ a.dynatree-title:active, .dynatree-node:active, .dynatree-node:active > a { bord
 #MyFiles a.Drive { height: 70px; }
 #MyFiles a .icon { float: left; text-align: center; margin-right: 10px; width: 40px; height: 40px; background: transparent no-repeat center center; font-size: 36px; line-height: 40px; }
 #MyFiles a.Drive .icon { height: 64px; width: 64px; font-size: 60px; line-height: 64px; }
-#MyFiles a .label { padding: 0; display: block; line-height: 13px; text-overflow: ellipsis; white-space: normal; }
+#MyFiles a .label { padding: 0; display: block; line-height: 13px; text-overflow: ellipsis; white-space: nowrap; }
 #MyFiles a.Selectable:active .label, #MyFiles a.Selected { color: #fff; }
 #MyFiles a.Folder .label { padding-top: 4px; }
 #MyFiles a.Drive .label { padding-top: 10px; }
